; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_297.c_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_297.c_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"[+] connected!\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"[-] shell.select()\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"[-] shell.recv(stdin)\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"[-] shell.recv(socket)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @shell(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [4096 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %47, %1
  %8 = call i32 @FD_ZERO(i32* %5)
  %9 = call i32 @FD_SET(i32 0, i32* %5)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @FD_SET(i32 %10, i32* %5)
  %12 = load i32, i32* %2, align 4
  %13 = add nsw i32 %12, 1
  %14 = call i64 @select(i32 %13, i32* %5, i32* null, i32* null, i32* null)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %7
  %17 = call i32 @fatal(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %7
  %19 = call i64 @FD_ISSET(i32 0, i32* %5)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %32

21:                                               ; preds = %18
  %22 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %23 = call i32 @read(i32 1, i8* %22, i32 4096)
  store i32 %23, i32* %4, align 4
  %24 = icmp slt i32 %23, 1
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = call i32 @fatal(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  br label %27

27:                                               ; preds = %25, %21
  %28 = load i32, i32* %2, align 4
  %29 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @send(i32 %28, i8* %29, i32 %30, i32 0)
  br label %32

32:                                               ; preds = %27, %18
  %33 = load i32, i32* %2, align 4
  %34 = call i64 @FD_ISSET(i32 %33, i32* %5)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %47

36:                                               ; preds = %32
  %37 = load i32, i32* %2, align 4
  %38 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %39 = call i32 @recv(i32 %37, i8* %38, i32 4096, i32 0)
  store i32 %39, i32* %4, align 4
  %40 = icmp slt i32 %39, 1
  br i1 %40, label %41, label %43

41:                                               ; preds = %36
  %42 = call i32 @fatal(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  br label %43

43:                                               ; preds = %41, %36
  %44 = getelementptr inbounds [4096 x i8], [4096 x i8]* %3, i64 0, i64 0
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @write(i32 1, i8* %44, i32 %45)
  br label %47

47:                                               ; preds = %43, %32
  br label %7
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i64 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @fatal(i8*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
